rebuild: project structure to controller/service/repository/model pattern add: decomposition tests: upgrade unit-tests to new structure